
EXTRA_DIST = babeld.init babeld.service bgpd.init bgpd.service isisd.init \
	isisd.service ospf6d.init ospf6d.service ospfd.init ospfd.service \
	bane.logrotate bane.pam bane.pam.stack bane.spec \
	bane.sysconfig ripd.init ripd.service ripngd.init ripngd.service \
	pimd.init pimd.service watchbane.init kroute.init kroute.service
